# spytify-LE

./: .env  .env.example  .gitignore  Dockerfile  INSTALL.md  LICENSE  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  spotifyd.conf  start.sh  test_integration_buffer_health.py
.github/workflows/: manual-release.yml  python.yml
.kiro/specs/audio-buffer-optimization/: design.md  requirements.md  tasks.md
beets/: config.yaml
docs/: arr-example-dockerfile  developer-guide.md  pass1-engine-design.md  pass2-pipeline-design.md  pass3-recovery-design.md  refactor-roadmap.md  track-history-design.md
spoti2_service/: __init__.py  __main__.py  service_app.py  web_ui.py
spotify_splitter/: audio.py  buffer_health_monitor.py  buffer_management.py  chunk_ledger.py  cli_commands.py  config_profiles.py  debug_mode.py  doctor.py  duration_parser.py  engine.py  error_recovery.py  lastfm_api.py  main.py  metadata_edit.py  metrics_collector.py  mpris.py  performance_dashboard.py  performance_optimizer.py  recorder_status.py  segmenter.py  tagging_api.py  track_boundary_detector.py  track_history.py  user_config.py  util.py
tests/: test_audio.py  test_audio_buffer_stress.py  test_audio_quality_validation.py  test_buffer_health_monitor.py  test_buffer_management.py  test_chunk_ledger.py  test_cli.py  test_config_profiles.py  test_doctor.py  test_duration_parser.py  test_engine.py  test_enhanced_audio_stream.py  test_enhanced_segment_processing.py  test_error_recovery.py  test_error_recovery_integration.py  test_hardware_variation_simulation.py  test_integration_buffer_health.py  test_integration_buffer_management.py  test_lastfm_api.py  test_long_running_session_stability.py  test_main_integration.py  test_metadata_edit.py  test_metrics_collector.py  test_performance_benchmarks.py  test_recorder_status.py  test_segment_failure_handling.py  test_segmenter.py  test_service_app.py  test_track_boundary_detector.py  test_track_history.py  test_util.py
work-in-progress/: Dockerfile.standalone  README-DOCKER.md  docker-compose.standalone.yml  docker-compose.yml  setup-docker.sh  test-spotifyd.conf
work-in-progress/docker/: pulseaudio-init.sh  spotifyd-template.conf  start-simple.sh  start-standalone.sh  supervisord.conf
