[tool.poetry]
name = "spotify-splitter"
version = "0.1.0"
description = "Record Spotify playback and split tracks with metadata"
authors = ["Example <example@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydbus = "^0.6.0"
sounddevice = "^0.5.2"
numpy = "^2.2.6"
pydub = "^0.25.1"
mutagen = "^1.47.0"
requests = "^2.32.4"
typer = "^0.16.0"
rich = "^14.0.0"
pyaudioop = "*" 

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.poetry.scripts]
spotify-splitter = "spotify_splitter.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
