[tool.poetry]
name = "spotify-splitter"
version = "0.1.0"
description = "Record Spotify playback and split tracks with metadata"
authors = ["Marc Brown <your-email@example.com>"]
readme = "README.md"
repository = "https://github.com/Brownster/spytify-LE"
keywords = ["spotify", "audio", "recording", "music", "splitter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydbus = "^0.6.0"
sounddevice = "^0.5.2"
numpy = "^2.2.6"
pydub = "^0.25.1"
mutagen = "^1.47.0"
requests = "^2.32.4"
typer = "^0.16.0"
rich = "^14.0.0"
psutil = "^7.1.3"
audioop-lts = {version = "^0.2.2", python = ">=3.13"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.poetry.scripts]
spotify-splitter = "spotify_splitter.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["-v", "--disable-warnings", "-p", "no:html"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
